--- a/etcd/statefulset.yaml
+++ b/etcd/statefulset.yaml
@@ -51,7 +51,7 @@ spec:
       name: etcd-data
     spec:
       accessModes: ["ReadWriteOnce"]
-      storageClassName: local-path
+      storageClassName: postgres-local-path
       resources:
         requests:
           storage: 5Gi
