--- a/storage-class.yaml
+++ b/storage-class.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: local-path
+  name: postgres-local-path
 provisioner: rancher.io/local-path
 parameters:
   nodePath: /home/alien/masterdb
