--- a/full.yaml
+++ b/full.yaml
@@ -1,18 +1,3 @@
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: etcd
-  namespace: postgres-ha
-spec:
-  clusterIP: None
-  ports:
-  - port: 2379
-    name: client
-  - port: 2380
-    name: peer
-  selector:
-    app: etcd---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -66,75 +51,62 @@ spec:
       name: etcd-data
     spec:
       accessModes: ["ReadWriteOnce"]
-      storageClassName: local-path
+      storageClassName: postgres-local-path
       resources:
         requests:
-          storage: 5Gi---
+          storage: 5Gi
+
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: postgres-ha---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-config
-  namespace: postgres-ha
-data:
-  PATRONI_POSTGRESQL_PG_HBA: |
-    host all all 0.0.0.0/0 trust
-    host replication replicator 0.0.0.0/0 trust---
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-patroni
+  name: etcd
   namespace: postgres-ha
 spec:
   clusterIP: None
   ports:
-  - port: 10003
-    targetPort: 10003
-    name: postgres
-  - port: 8008
-    name: patroni
+  - port: 2379
+    name: client
+  - port: 2380
+    name: peer
   selector:
-    app: postgres-patroni---
+    app: etcd
+
+---
 apiVersion: v1
-kind: Service
+kind: ConfigMap
 metadata:
-  name: postgres-master
-  namespace: postgres-ha
-  labels:
-    app: postgres-patroni
-spec:
-  type: NodePort
-  ports:
-  - port: 10003
-    targetPort: 10003
-    nodePort: 30002
-    protocol: TCP
-    name: postgres
-  selector:
-    app: postgres-patroni
-    role: master---
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres-replicas
-  namespace: postgres-ha
-  labels:
-    app: postgres-patroni
-spec:
-  type: NodePort
-  ports:
-  - port: 10003
-    targetPort: 10003
-    nodePort: 30003
-    protocol: TCP
-    name: postgres
-  selector:
-    app: postgres-patroni
-    role: replica---
+  name: local-path-config
+  namespace: local-path-storage
+data:
+  config.json: |-
+    {
+      "nodePathMap":[
+        {
+          "node":"DEFAULT_PATH_FOR_NON_LISTED_NODES",
+          "paths":["/home/alien/masterdb"]
+        }
+      ]
+    }
+  setup: |-
+    #!/bin/sh
+    set -eu
+    mkdir -m 0777 -p "$VOL_DIR"
+  teardown: |-
+    #!/bin/sh
+    set -eu
+    rm -rf "$VOL_DIR"
+  helperPod.yaml: |-
+    apiVersion: v1
+    kind: Pod
+    metadata:
+      name: helper-pod
+    spec:
+      containers:
+      - name: helper-pod
+        image: busybox
+
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -246,10 +218,95 @@ spec:
       name: postgres-data
     spec:
       accessModes: ["ReadWriteOnce"]
-      storageClassName: local-path
+      storageClassName: postgres-local-path
       resources:
         requests:
-          storage: 20Gi---
+          storage: 20Gi
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-config
+  namespace: postgres-ha
+data:
+  PATRONI_POSTGRESQL_PG_HBA: |
+    host all all 0.0.0.0/0 trust
+    host replication replicator 0.0.0.0/0 trust
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres-patroni
+  namespace: postgres-ha
+spec:
+  clusterIP: None
+  ports:
+  - port: 10003
+    targetPort: 10003
+    name: postgres
+  - port: 8008
+    name: patroni
+  selector:
+    app: postgres-patroni
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres-master
+  namespace: postgres-ha
+  labels:
+    app: postgres-patroni
+spec:
+  type: NodePort
+  ports:
+  - port: 10003
+    targetPort: 10003
+    nodePort: 30002
+    protocol: TCP
+    name: postgres
+  selector:
+    app: postgres-patroni
+    role: master
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres-replicas
+  namespace: postgres-ha
+  labels:
+    app: postgres-patroni
+spec:
+  type: NodePort
+  ports:
+  - port: 10003
+    targetPort: 10003
+    nodePort: 30003
+    protocol: TCP
+    name: postgres
+  selector:
+    app: postgres-patroni
+    role: replica
+
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: postgres-local-path
+provisioner: rancher.io/local-path
+volumeBindingMode: WaitForFirstConsumer
+reclaimPolicy: Retain
+
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: postgres-ha
+
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -261,11 +318,6 @@ stringData:
   POSTGRES_PASSWORD: his123
   POSTGRES_DB: registration
   REPLICATION_USER: replicator
-  REPLICATION_PASSWORD: rep-pass---
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: local-storage
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
-reclaimPolicy: Retain
+  REPLICATION_PASSWORD: rep-pass
+
+---
