--- a/local-path-config.yaml
+++ b/local-path-config.yaml
@@ -2,12 +2,16 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: local-path-config
-  namespace: local-path-storage
+  namespace: kube-system
 data:
-  config.json: |
+  config.json: |-
     {
-      "node":"server",
-      "paths":["/home/alien/masterdb"]
+      "nodePathMap":[
+        {
+          "node":"DEFAULT_PATH_FOR_NON_LISTED_NODES",
+          "paths":["/home/alien/masterdb"]
+        }
+      ]
     }
   setup: |-
     #!/bin/sh
@@ -17,12 +21,3 @@ data:
     #!/bin/sh
     set -eu
     rm -rf "$VOL_DIR"
-  helperPod.yaml: |-
-    apiVersion: v1
-    kind: Pod
-    metadata:
-      name: helper-pod
-    spec:
-      containers:
-      - name: helper-pod
-        image: busybox
