--- a/patroni/statefulset.yaml
+++ b/patroni/statefulset.yaml
@@ -19,7 +19,9 @@ spec:
         image: registry.opensource.zalan.do/acid/spilo-15:3.0-p1
         ports:
         - containerPort: 10003
+          name: postgres
         - containerPort: 8008
+          name: patroni
         env:
         - name: SCOPE
           value: postgres-cluster
@@ -28,9 +30,15 @@ spec:
         - name: PGPORT
           value: "10003"
         - name: ETCD3_HOSTS
-          value: "etcd-0.etcd.postgres-ha.svc.cluster.local:2379,etcd-1.etcd.postgres-ha.svc.cluster.local:2379,etcd-2.etcd.postgres-ha.svc.cluster.local:2379"
+          value: 'etcd-0.etcd:2379,etcd-1.etcd:2379,etcd-2.etcd:2379'
         - name: KUBERNETES_LABELS
           value: '{app: postgres-patroni}'
+        - name: KUBERNETES_SCOPE_LABEL
+          value: app
+        - name: KUBERNETES_ROLE_LABEL
+          value: role
+        - name: KUBERNETES_USE_CONFIGMAPS
+          value: "true"
         - name: POD_IP
           valueFrom:
             fieldRef:
@@ -39,10 +47,6 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        - name: POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
         - name: PGUSER_SUPERUSER
           valueFrom:
             secretKeyRef:
@@ -69,20 +73,43 @@ spec:
               name: postgres-secrets
               key: POSTGRES_DB
         - name: PATRONI_POSTGRESQL_CONNECT_ADDRESS
-          value: "$(POD_IP):10003"
+          value: '$(POD_IP):10003'
+        - name: PATRONI_POSTGRESQL_LISTEN
+          value: '0.0.0.0:10003'
+        - name: PATRONI_RESTAPI_LISTEN
+          value: '0.0.0.0:8008'
+        - name: PATRONI_BOOTSTRAP_DCS_POSTGRESQL_PARAMETERS_PORT
+          value: "10003"
         envFrom:
         - configMapRef:
             name: postgres-config
         volumeMounts:
         - name: postgres-data
-          mountPath: /home/postgres/pgdata
+          mountPath: /home/postgres/pgdata/pgroot
         - name: dshm
           mountPath: /dev/shm
+        livenessProbe:
+          httpGet:
+            path: /liveness
+            port: 8008
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /readiness
+            port: 8008
+          initialDelaySeconds: 10
+          periodSeconds: 10
       volumes:
-      - name: postgres-data
-        hostPath:
-          path: /home/alien/masterdb/postgres-patroni-$(POD_NAME)
-          type: DirectoryOrCreate
       - name: dshm
         emptyDir:
           medium: Memory
+  volumeClaimTemplates:
+  - metadata:
+      name: postgres-data
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      storageClassName: postgres-local-path
+      resources:
+        requests:
+          storage: 20Gi
