--- a/local-path-config.yaml
+++ b/local-path-config.yaml
@@ -17,7 +17,19 @@ data:
     #!/bin/sh
     set -eu
     mkdir -m 0777 -p "$VOL_DIR"
+    chmod 777 "$VOL_DIR"
   teardown: |-
     #!/bin/sh
     set -eu
-    rm -rf "$VOL_DIR"
+    # Do NOT delete data for migration purposes
+    echo "Skipping deletion to preserve data"
+  helperPod.yaml: |-
+    apiVersion: v1
+    kind: Pod
+    metadata:
+      name: helper-pod
+    spec:
+      containers:
+      - name: helper-pod
+        image: busybox
+        imagePullPolicy: IfNotPresent
