--- a/etcd/service.yaml
+++ b/etcd/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: etcd
-  namespace: postgres-ha
+  namespace: his-masterdb
 spec:
   clusterIP: None
   ports:
