--- a/local-path-config.yaml
+++ b/local-path-config.yaml
@@ -9,7 +9,7 @@ data:
       "nodePathMap":[
         {
           "node":"DEFAULT_PATH_FOR_NON_LISTED_NODES",
-          "paths":["/home/alien/masterdb"]
+          "paths":["/home/alien/his-masterdb"]
         }
       ]
     }
