--- a/patroni/service-headless.yaml
+++ b/patroni/service-headless.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres-patroni
-  namespace: postgres-ha
+  namespace: his-masterdb
 spec:
   clusterIP: None
   ports:
