--- a/patroni/service-replicas.yaml
+++ b/patroni/service-replicas.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres-replicas
-  namespace: postgres-ha
+  namespace: his-masterdb
   labels:
     app: postgres-patroni
 spec:
