--- a/secrets.yaml
+++ b/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-secrets
-  namespace: postgres-ha
+  namespace: his-masterdb
 type: Opaque
 stringData:
   POSTGRES_USER: his
