Refactor service and statefulset configurations for etcd and patroni to improve clarity and consistency in port definitions

--- a/etcd/service.yaml
+++ b/etcd/service.yaml
@@ -5,10 +5,10 @@ metadata:
   namespace: his-masterdb
 spec:
   clusterIP: None
-  ports:
-  - port: 2379
-    name: client
-  - port: 2380
-    name: peer
   selector:
     app: etcd
+  ports:
+  - name: client
+    port: 2379
+  - name: peer
+    port: 2380
