--- a/etcd/statefulset.yaml
+++ b/etcd/statefulset.yaml
@@ -4,8 +4,8 @@ metadata:
   name: etcd
   namespace: his-masterdb
 spec:
-  serviceName: etcd
   replicas: 3
+  serviceName: etcd
   selector:
     matchLabels:
       app: etcd
@@ -17,40 +17,42 @@ spec:
       containers:
       - name: etcd
         image: quay.io/coreos/etcd:v3.5.9
-        ports:
-        - containerPort: 2379
-          name: client
-        - containerPort: 2380
-          name: peer
         env:
         - name: ETCD_NAME
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
         - name: ETCD_INITIAL_ADVERTISE_PEER_URLS
-          value: http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2380
+          value: "http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2380"
         - name: ETCD_LISTEN_PEER_URLS
-          value: http://0.0.0.0:2380
+          value: "http://0.0.0.0:2380"
         - name: ETCD_LISTEN_CLIENT_URLS
-          value: http://0.0.0.0:2379
+          value: "http://0.0.0.0:2379"
         - name: ETCD_ADVERTISE_CLIENT_URLS
-          value: http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2379
+          value: "http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2379"
         - name: ETCD_INITIAL_CLUSTER
-          value: etcd-0=http://etcd-0.etcd.his-masterdb.svc.cluster.local:2380,etcd-1=http://etcd-1.etcd.his-masterdb.svc.cluster.local:2380,etcd-2=http://etcd-2.etcd.his-masterdb.svc.cluster.local:2380
+          value: |
+            etcd-0=http://etcd-0.etcd.his-masterdb.svc.cluster.local:2380,etcd-1=http://etcd-1.etcd.his-masterdb.svc.cluster.local:2380,etcd-2=http://etcd-2.etcd.his-masterdb.svc.cluster.local:2380
         - name: ETCD_INITIAL_CLUSTER_STATE
           value: new
         - name: ETCD_INITIAL_CLUSTER_TOKEN
           value: etcd-cluster
         - name: ETCD_DATA_DIR
           value: /var/lib/etcd
+        ports:
+        - containerPort: 2379
+          name: client
+        - containerPort: 2380
+          name: peer
         volumeMounts:
-        - name: etcd-data
+        - name: data
           mountPath: /var/lib/etcd
   volumeClaimTemplates:
   - metadata:
-      name: etcd-data
+      name: data
     spec:
-      accessModes: ["ReadWriteOnce"]
+      accessModes:
+      - ReadWriteOnce
       storageClassName: his-masterdb-local-path
       resources:
         requests:
