--- a/patroni/service-master.yaml
+++ b/patroni/service-master.yaml
@@ -7,12 +7,11 @@ metadata:
     app: postgres-patroni
 spec:
   type: NodePort
-  ports:
-  - port: 10003
-    targetPort: 10003
-    nodePort: 30002
-    protocol: TCP
-    name: postgres
   selector:
     app: postgres-patroni
     role: master
+  ports:
+  - name: postgres
+    port: 10003
+    targetPort: 10003
+    nodePort: 30002
