--- a/patroni/statefulset.yaml
+++ b/patroni/statefulset.yaml
@@ -4,8 +4,8 @@ metadata:
   name: postgres-patroni
   namespace: his-masterdb
 spec:
-  serviceName: postgres-patroni
   replicas: 3
+  serviceName: postgres-patroni
   selector:
     matchLabels:
       app: postgres-patroni
@@ -17,11 +17,6 @@ spec:
       containers:
       - name: patroni
         image: registry.opensource.zalan.do/acid/spilo-15:3.0-p1
-        ports:
-        - containerPort: 10003
-          name: postgres
-        - containerPort: 8008
-          name: patroni
         env:
         - name: SCOPE
           value: postgres-cluster
@@ -31,18 +26,12 @@ spec:
           value: "10003"
         - name: ETCD3_HOSTS
           value: 'etcd-0.etcd.his-masterdb.svc.cluster.local:2379,etcd-1.etcd.his-masterdb.svc.cluster.local:2379,etcd-2.etcd.his-masterdb.svc.cluster.local:2379'
-        - name: KUBERNETES_LABELS
-          value: '{app: postgres-patroni}'
         - name: KUBERNETES_SCOPE_LABEL
           value: app
         - name: KUBERNETES_ROLE_LABEL
           value: role
         - name: KUBERNETES_USE_CONFIGMAPS
           value: "true"
-        - name: POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
         - name: POD_NAMESPACE
           valueFrom:
             fieldRef:
@@ -72,44 +61,16 @@ spec:
             secretKeyRef:
               name: postgres-secrets
               key: POSTGRES_DB
-        - name: PATRONI_POSTGRESQL_CONNECT_ADDRESS
-          value: '$(POD_IP):10003'
-        - name: PATRONI_POSTGRESQL_LISTEN
-          value: '0.0.0.0:10003'
-        - name: PATRONI_RESTAPI_LISTEN
-          value: '0.0.0.0:8008'
-        - name: PATRONI_BOOTSTRAP_DCS_POSTGRESQL_PARAMETERS_PORT
-          value: "10003"
-        envFrom:
-        - configMapRef:
-            name: postgres-config
         volumeMounts:
         - name: postgres-data
           mountPath: /home/postgres/pgdata/pgroot
-        - name: dshm
-          mountPath: /dev/shm
-        livenessProbe:
-          httpGet:
-            path: /liveness
-            port: 8008
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /readiness
-            port: 8008
-          initialDelaySeconds: 10
-          periodSeconds: 10
-      volumes:
-      - name: dshm
-        emptyDir:
-          medium: Memory
-  volumeClaimTemplates:
-  - metadata:
-      name: postgres-data
-    spec:
-      accessModes: ["ReadWriteOnce"]
-      storageClassName: his-masterdb-local-path
-      resources:
-        requests:
-          storage: 20Gi
+      volumeClaimTemplates:
+      - metadata:
+          name: postgres-data
+        spec:
+          accessModes:
+          - ReadWriteOnce
+          storageClassName: his-masterdb-local-path
+          resources:
+            requests:
+              storage: 20Gi
