--- a/etcd/statefulset.yaml
+++ b/etcd/statefulset.yaml
@@ -1,59 +1,86 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: etcd
+  name: postgres-patroni
   namespace: his-masterdb
 spec:
   replicas: 3
-  serviceName: etcd
+  serviceName: postgres-patroni
   selector:
     matchLabels:
-      app: etcd
+      app: postgres-patroni
   template:
     metadata:
       labels:
-        app: etcd
+        app: postgres-patroni
     spec:
+      serviceAccountName: patroni                       # Use Patroni ServiceAccount here
       containers:
-      - name: etcd
-        image: quay.io/coreos/etcd:v3.5.9
+      - name: patroni
+        image: registry.opensource.zalan.do/acid/spilo-15:3.0-p1
+        ports:
+        - containerPort: 10003
+          name: postgres
+        - containerPort: 8008
+          name: patroni
         env:
-        - name: ETCD_NAME
+        - name: SCOPE
+          value: postgres-cluster
+        - name: PGVERSION
+          value: "15"
+        - name: PGPORT
+          value: "10003"
+        - name: ETCD3_HOSTS
+          value: 'etcd-0.etcd.his-masterdb.svc.cluster.local:2379,etcd-1.etcd.his-masterdb.svc.cluster.local:2379,etcd-2.etcd.his-masterdb.svc.cluster.local:2379'
+        - name: KUBERNETES_SCOPE_LABEL
+          value: app
+        - name: KUBERNETES_ROLE_LABEL
+          value: role
+        - name: KUBERNETES_USE_CONFIGMAPS
+          value: "true"
+        - name: POD_NAMESPACE
           valueFrom:
             fieldRef:
-              fieldPath: metadata.name
-        - name: ETCD_INITIAL_ADVERTISE_PEER_URLS
-          value: "http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2380"
-        - name: ETCD_LISTEN_PEER_URLS
-          value: "http://0.0.0.0:2380"
-        - name: ETCD_LISTEN_CLIENT_URLS
-          value: "http://0.0.0.0:2379"
-        - name: ETCD_ADVERTISE_CLIENT_URLS
-          value: "http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2379"
-        - name: ETCD_INITIAL_CLUSTER
-          value: |
-            etcd-0=http://etcd-0.etcd.his-masterdb.svc.cluster.local:2380,etcd-1=http://etcd-1.etcd.his-masterdb.svc.cluster.local:2380,etcd-2=http://etcd-2.etcd.his-masterdb.svc.cluster.local:2380
-        - name: ETCD_INITIAL_CLUSTER_STATE
-          value: new
-        - name: ETCD_INITIAL_CLUSTER_TOKEN
-          value: etcd-cluster
-        - name: ETCD_DATA_DIR
-          value: /var/lib/etcd
-        ports:
-        - containerPort: 2379
-          name: client
-        - containerPort: 2380
-          name: peer
+              fieldPath: metadata.namespace
+        - name: PGUSER_SUPERUSER
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secrets
+              key: POSTGRES_USER
+        - name: PGPASSWORD_SUPERUSER
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secrets
+              key: POSTGRES_PASSWORD
+        - name: PGUSER_REPLICATOR
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secrets
+              key: REPLICATION_USER
+        - name: PGPASSWORD_REPLICATOR
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secrets
+              key: REPLICATION_PASSWORD
+        - name: PGDATABASE
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secrets
+              key: POSTGRES_DB
         volumeMounts:
-        - name: data
-          mountPath: /var/lib/etcd
+        - name: postgres-data
+          mountPath: /home/postgres/pgdata/pgroot
+      volumes:
+      - name: dshm
+        emptyDir:
+          medium: Memory
   volumeClaimTemplates:
   - metadata:
-      name: data
+      name: postgres-data
     spec:
       accessModes:
       - ReadWriteOnce
       storageClassName: his-masterdb-local-path
       resources:
         requests:
-          storage: 5Gi
+          storage: 20Gi
