Refactor deploy script for improved organization and clarity in deployment steps

--- a/02-secrets/secrets.yaml
+++ b/02-secrets/secrets.yaml
@@ -5,8 +5,10 @@ metadata:
   namespace: his-masterdb
 type: Opaque
 stringData:
+  PATRONI_SUPERUSER_USERNAME: postgres
+  PATRONI_SUPERUSER_PASSWORD: postgres123
+  PATRONI_REPLICATION_USERNAME: replicator
+  PATRONI_REPLICATION_PASSWORD: rep-pass
   POSTGRES_USER: his
   POSTGRES_PASSWORD: his123
   POSTGRES_DB: registration
-  REPLICATION_USER: replicator
-  REPLICATION_PASSWORD: rep-pass
