--- a/01-rbac/rolebinding.yaml
+++ b/01-rbac/rolebinding.yaml
@@ -1,13 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: patroni-rolebinding
+  name: postgres-patroni
   namespace: his-masterdb
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: patroni-clusterrole
+  kind: Role
+  name: postgres-patroni
 subjects:
 - kind: ServiceAccount
-  name: patroni
+  name: postgres-patroni
   namespace: his-masterdb
