--- a/03-storage/storageclass.yaml
+++ b/03-storage/storageclass.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: his-masterdb-local-path
-provisioner: rancher.io/local-path
+  name: local-storage-masterdb
+provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 reclaimPolicy: Retain
