--- a/04-etcd/statefulset.yaml
+++ b/04-etcd/statefulset.yaml
@@ -40,7 +40,7 @@ spec:
         - name: ETCD_INITIAL_CLUSTER
           value: "etcd-0=http://etcd-0.etcd.his-masterdb.svc.cluster.local:2380,etcd-1=http://etcd-1.etcd.his-masterdb.svc.cluster.local:2380,etcd-2=http://etcd-2.etcd.his-masterdb.svc.cluster.local:2380"
         - name: ETCD_INITIAL_CLUSTER_STATE
-          value: "new"
+          value: "existing"
         - name: ETCD_INITIAL_CLUSTER_TOKEN
           value: "etcd-cluster-masterdb"
         - name: ETCD_DATA_DIR
