--- a/04-etcd/statefulset.yaml
+++ b/04-etcd/statefulset.yaml
@@ -16,6 +16,9 @@ spec:
       labels:
         app: etcd
     spec:
+      securityContext:
+        fsGroup: 1001
+        runAsUser: 1001
       containers:
       - name: etcd
         image: quay.io/coreos/etcd:v3.5.10
@@ -24,6 +27,21 @@ spec:
           name: client
         - containerPort: 2380
           name: peer
+        command:
+        - /bin/sh
+        - -c
+        - |
+          # Create data dir if not exists
+          mkdir -p /etcd-data
+          
+          # Check if cluster already exists
+          if [ -d "/etcd-data/member" ]; then
+            export ETCD_INITIAL_CLUSTER_STATE="existing"
+          else
+            export ETCD_INITIAL_CLUSTER_STATE="new"
+          fi
+          
+          exec etcd
         env:
         - name: ETCD_NAME
           valueFrom:
@@ -39,8 +57,6 @@ spec:
           value: "http://0.0.0.0:2379"
         - name: ETCD_INITIAL_CLUSTER
           value: "etcd-0=http://etcd-0.etcd.his-masterdb.svc.cluster.local:2380,etcd-1=http://etcd-1.etcd.his-masterdb.svc.cluster.local:2380,etcd-2=http://etcd-2.etcd.his-masterdb.svc.cluster.local:2380"
-        - name: ETCD_INITIAL_CLUSTER_STATE
-          value: "existing"
         - name: ETCD_INITIAL_CLUSTER_TOKEN
           value: "etcd-cluster-masterdb"
         - name: ETCD_DATA_DIR
