--- a/04-etcd/statefulset.yaml
+++ b/04-etcd/statefulset.yaml
@@ -7,7 +7,8 @@ metadata:
     app: etcd
 spec:
   serviceName: etcd
-  replicas: 1  # ← Changed from 3 to 1
+  replicas: 3
+  podManagementPolicy: Parallel
   selector:
     matchLabels:
       app: etcd
@@ -18,33 +19,39 @@ spec:
     spec:
       containers:
       - name: etcd
-        image: quay.io/coreos/etcd:v3.5.10
+        image: bitnami/etcd:3.5.10
         ports:
         - containerPort: 2379
           name: client
         - containerPort: 2380
           name: peer
         env:
-        - name: ETCD_NAME
+        - name: BITNAMI_DEBUG
+          value: "false"
+        - name: MY_POD_NAME
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
-        - name: ETCD_INITIAL_ADVERTISE_PEER_URLS
-          value: "http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2380"
+        - name: ETCD_NAME
+          value: "$(MY_POD_NAME)"
+        - name: ETCD_DATA_DIR
+          value: /etcd-data
         - name: ETCD_ADVERTISE_CLIENT_URLS
-          value: "http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2379"
-        - name: ETCD_LISTEN_PEER_URLS
-          value: "http://0.0.0.0:2380"
+          value: "http://$(MY_POD_NAME).etcd.his-masterdb.svc.cluster.local:2379"
         - name: ETCD_LISTEN_CLIENT_URLS
           value: "http://0.0.0.0:2379"
-        - name: ETCD_INITIAL_CLUSTER
-          value: "etcd-0=http://etcd-0.etcd.his-masterdb.svc.cluster.local:2380"  # ← Only etcd-0
-        - name: ETCD_INITIAL_CLUSTER_STATE
-          value: "new"
+        - name: ETCD_INITIAL_ADVERTISE_PEER_URLS
+          value: "http://$(MY_POD_NAME).etcd.his-masterdb.svc.cluster.local:2380"
+        - name: ETCD_LISTEN_PEER_URLS
+          value: "http://0.0.0.0:2380"
         - name: ETCD_INITIAL_CLUSTER_TOKEN
           value: "etcd-cluster-masterdb"
-        - name: ETCD_DATA_DIR
-          value: "/etcd-data"
+        - name: ETCD_INITIAL_CLUSTER_STATE
+          value: "new"
+        - name: ETCD_INITIAL_CLUSTER
+          value: "etcd-0=http://etcd-0.etcd.his-masterdb.svc.cluster.local:2380,etcd-1=http://etcd-1.etcd.his-masterdb.svc.cluster.local:2380,etcd-2=http://etcd-2.etcd.his-masterdb.svc.cluster.local:2380"
+        - name: ALLOW_NONE_AUTHENTICATION
+          value: "yes"
         volumeMounts:
         - name: etcd-storage
           mountPath: /etcd-data
@@ -56,19 +63,15 @@ spec:
             memory: "512Mi"
             cpu: "500m"
         livenessProbe:
-          httpGet:
-            path: /health
+          tcpSocket:
             port: 2379
-            scheme: HTTP
           initialDelaySeconds: 60
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 10
         readinessProbe:
-          httpGet:
-            path: /health
+          tcpSocket:
             port: 2379
-            scheme: HTTP
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
