--- a/04-etcd/statefulset.yaml
+++ b/04-etcd/statefulset.yaml
@@ -7,8 +7,7 @@ metadata:
     app: etcd
 spec:
   serviceName: etcd
-  replicas: 3
-  podManagementPolicy: Parallel
+  replicas: 1  # ← Start with 1 only
   selector:
     matchLabels:
       app: etcd
@@ -19,39 +18,33 @@ spec:
     spec:
       containers:
       - name: etcd
-        image: bitnami/etcd:3.5.10
+        image: quay.io/coreos/etcd:v3.5.10
         ports:
         - containerPort: 2379
           name: client
         - containerPort: 2380
           name: peer
         env:
-        - name: BITNAMI_DEBUG
-          value: "false"
-        - name: MY_POD_NAME
+        - name: ETCD_NAME
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
-        - name: ETCD_NAME
-          value: "$(MY_POD_NAME)"
-        - name: ETCD_DATA_DIR
-          value: /etcd-data
-        - name: ETCD_ADVERTISE_CLIENT_URLS
-          value: "http://$(MY_POD_NAME).etcd.his-masterdb.svc.cluster.local:2379"
-        - name: ETCD_LISTEN_CLIENT_URLS
-          value: "http://0.0.0.0:2379"
         - name: ETCD_INITIAL_ADVERTISE_PEER_URLS
-          value: "http://$(MY_POD_NAME).etcd.his-masterdb.svc.cluster.local:2380"
+          value: "http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2380"
+        - name: ETCD_ADVERTISE_CLIENT_URLS
+          value: "http://$(ETCD_NAME).etcd.his-masterdb.svc.cluster.local:2379"
         - name: ETCD_LISTEN_PEER_URLS
           value: "http://0.0.0.0:2380"
-        - name: ETCD_INITIAL_CLUSTER_TOKEN
-          value: "etcd-cluster-masterdb"
+        - name: ETCD_LISTEN_CLIENT_URLS
+          value: "http://0.0.0.0:2379"
+        - name: ETCD_INITIAL_CLUSTER
+          value: "etcd-0=http://etcd-0.etcd.his-masterdb.svc.cluster.local:2380"  # ← Only etcd-0
         - name: ETCD_INITIAL_CLUSTER_STATE
           value: "new"
-        - name: ETCD_INITIAL_CLUSTER
-          value: "etcd-0=http://etcd-0.etcd.his-masterdb.svc.cluster.local:2380,etcd-1=http://etcd-1.etcd.his-masterdb.svc.cluster.local:2380,etcd-2=http://etcd-2.etcd.his-masterdb.svc.cluster.local:2380"
-        - name: ALLOW_NONE_AUTHENTICATION
-          value: "yes"
+        - name: ETCD_INITIAL_CLUSTER_TOKEN
+          value: "etcd-cluster-masterdb"
+        - name: ETCD_DATA_DIR
+          value: "/etcd-data"
         volumeMounts:
         - name: etcd-storage
           mountPath: /etcd-data
@@ -63,15 +56,19 @@ spec:
             memory: "512Mi"
             cpu: "500m"
         livenessProbe:
-          tcpSocket:
+          httpGet:
+            path: /health
             port: 2379
+            scheme: HTTP
           initialDelaySeconds: 60
           periodSeconds: 10
           timeoutSeconds: 5
           failureThreshold: 10
         readinessProbe:
-          tcpSocket:
+          httpGet:
+            path: /health
             port: 2379
+            scheme: HTTP
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
