Refactor Kubernetes manifests for PostgreSQL and etcd deployment
- Removed obsolete ServiceAccount and Secret manifests for PostgreSQL Patroni.
- Deleted persistent volume definitions for etcd and PostgreSQL.
- Removed storage class definition for local storage.
- Eliminated etcd service and stateful set configurations.
- Cleaned up Patroni service, config map, and stateful set definitions.
- Updated deployment scripts to reflect new directory structure and resource application order.
- Added new persistent volume claims for etcd and PostgreSQL.
- Introduced new namespace and RBAC role and role binding for PostgreSQL Patroni.
- Created new secrets for PostgreSQL credentials.
- Added README documentation for setup and connection instructions.

--- a/etcd/statefulset.yaml
+++ b/etcd/statefulset.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   serviceName: etcd
   replicas: 3
-  podManagementPolicy: Parallel  # ← Starts all 3 pods at once
+  podManagementPolicy: Parallel 
   selector:
     matchLabels:
       app: etcd
